--- a/multimidia.html
+++ b/multimidia.html
@@ -4,6 +4,7 @@
      <meta  charset="UTF-8"  />   
      <title> Tudo sobre Google Glass</title>
      <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+     <link rel="stylesheet" type="text/css" href="_css/media.css"/>
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="shortcut icon" href="favicon_io/favicon-32x32.png" type="image/x-icon">
@@ -12,55 +13,76 @@
 <script language="javascript" src="_javascript/funcoes.js"></script>
 
 <body>
-<div id="interface">
-
-<header id="cabecalho">  
-<hgroup> 
-    <h1>Google Glass</h1>
-    <h2>A revolução do Google está chegando</h2>
-</hgroup> 
-
-<!-- [AQUI ENTRA UMA FOTO] -->
-<img id=icone src="_imagens/multimidia.png">
-
-<nav id="menu">
-    <h1> Principal</h1>
-    <!-- parametros
-        type sem informar fica valor padrão
-        start mostra de onde iniciar
-    -->
-    <ul type="1">
-        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html"> Home</a></li>
-        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('_imagens/Fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-    </ul>
-</nav>
-
-</header>
-
-<header id="cabecalho-artigo">   
-    <hgroup>
-    <h3> Glass > Multimídia</h3>
-    <h1> Sons e Vídeos</h1>
-    <h2> por Gustavo Guanabara</h2>
-    <h3 class="direita">Atualizado em 01/Maio/2013</h3>
-    </hgroup>
-</header>
+    <div id="interface">
 
 
+            <header id="cabecalho">  
+                <hgroup> 
+                    <h1>Google Glass</h1>
+                    <h2>A revolução do Google está chegando</h2>
+                </hgroup> 
+
+                <!-- [AQUI ENTRA UMA FOTO] -->
+                <img id=icone src="_imagens/multimidia.png">
+
+                <nav id="menu">
+                    <h1> Principal</h1>
+                    <!-- parametros
+                        type sem informar fica valor padrão
+                        start mostra de onde iniciar
+                    -->
+                    <ul type="1">
+                        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html"> Home</a></li>
+                        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+                        <li onmouseover="mudaFoto('_imagens/Fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
+                        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+                        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    </ul>
+                </nav>
+
+            </header>
+
+    <setion id="corpo-full">  
+        <article id="noticia-principal">
+            <header id="cabecalho-artigo">   
+                <hgroup>
+                <h3> Glass > Multimídia</h3>
+                <h1> Sons e Vídeos</h1>
+                <h2> por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                </hgroup>
+            </header>
+
+            <div id="tv-radio">
+                    <!-- 
+                Áudio e Vídeo
+
+                [AQUI ENTRA UM VÍDEO]
+                [AQUI ENTRA UM ÁUDIO] 
+                existe o app mirovideo apra converter entre os formatos aceitos pelos navegadores (mp3, aac, ogg)
+                -->
+                <audio id="musica" controls="controls"> 
+                    <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+                    <source src="_media/2009-lovers-carvings-bibio.m4a" type="audio/x-aac"/>
+                    <source src="_media/2009-lovers-carvings-bibio.ogg" type="audio/ogg"/>
+                    Desculpe, mas não foi possivel carregar o áudio.
+                </audio>
+                <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg"> 
+                 <source src="_media/getting-started.mp4" type="video/mp4" />       
+                 <source src="_media/getting-started.webm" type="video/webm" />  
+                 <source src="_media/getting-started.ogv" type="video/ogg" />  
+                 Desculpe, mas não foi possivel carregar o vídeo. 
+                </video>
 
 
-Áudio e Vídeo
+            </div>
+        </article >
+    </setion>
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
-
-<footer id="rodape">
-    <p>Copyright &copy; 2013 - by Gustavo Guanabara<br/>
-    <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href= "http://twitter.com/cursoemvideo" target="_blank">Twitter</a></p>
+    <footer id="rodape">
+            <p>Copyright &copy; 2013 - by Gustavo Guanabara<br/>
+            <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href= "http://twitter.com/cursoemvideo" target="_blank">Twitter</a></p>
     </footer>
     </div>
-    </body>
-    </html>
+</body>
+</html>
