--- a/specs.html
+++ b/specs.html
@@ -4,65 +4,75 @@
      <meta  charset="UTF-8"  />   
      <title> Tudo sobre Google Glass</title>
      <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+     <link rel="stylesheet" type="text/css" href="_css/specs.css">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="shortcut icon" href="favicon_io/favicon-32x32.png" type="image/x-icon">
+     
 
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
 
 <body>
-<div id="interface">
+    <div id="interface">
 
-<header id="cabecalho">  
-<hgroup> 
-    <h1>Google Glass</h1>
-    <h2>A revolução do Google está chegando</h2>
-</hgroup> 
+    <header id="cabecalho">  
+    <hgroup> 
+        <h1>Google Glass</h1>
+        <h2>A revolução do Google está chegando</h2>
+    </hgroup> 
 
-<!-- [AQUI ENTRA UMA FOTO] -->
-<img id=icone src="_imagens/especificacoes.png">
+    <!-- [AQUI ENTRA UMA FOTO] -->
+    <img id="icone" src="_imagens/especificacoes.png">
 
-<nav id="menu">
-    <h1> Principal</h1>
-    <!-- parametros
-        type sem informar fica valor padrão
-        start mostra de onde iniciar
-    -->
-    <ul type="1">
-        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"> Home</a></li>
-        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('_imagens/Fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-    </ul>
-</nav>
+        <nav id="menu">
+            <h1> Principal</h1>
+            <!-- parametros
+                type sem informar fica valor padrão
+                start mostra de onde iniciar
+            -->
+            <ul type="1">
+                <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html"> Home</a></li>
+                <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
+                <li onmouseover="mudaFoto('_imagens/Fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fotos.html">Fotos</a></li>
+                <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a></li>
+                <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+            </ul>
+        </nav>
 
-</header>
+    </header>
 
-<header id="cabecalho-artigo">   
-    <hgroup>
-    <h3> Glass > Especificações</h3>
-    <h1> Raio-X no Google Glass</h1>
-    <h2> por Gustavo Guanabara</h2>
-    <h3 class="direita">Atualizado em 01/Maio/2013</h3>
-    </hgroup>
-</header>
+<setion id="corpo-full">  
+    <article id="noticia-principal">
+      <header id="cabecalho-artigo">             
+            <hgroup>
+                <h3> Glass > Especificações</h3>
+                <h1> Raio-X no Google Glass</h1>
+                <h2> por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+            </hgroup>
+      </header>
 
-<p>   Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
- 
-[<i>AQUI ENTRA UMA IMAGEM</i>]
+        <p>   Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+        
+        <section id="conteudo">
+             <!-- [<i>AQUI ENTRA UMA IMAGEM</i>] -->
+            <img src="_imagens/glass-esquema-marcado.jpg">
+            <map name="meumapa">
+                <area shape="rect" coords="179,218,271,258" href="google-glass.html#tela" target="janela"/>
+                <area shape="circle" coords="152,230,12" href="google-glass.html#camera" target="janela"/>
+                <area shape="circle" coords="73,52,12" href="google-glass.html#gadgets" target="janela"/>
+                <area shape="poly" coords="28,143,83,216,84,249,27,169" href="google-glass.html#sensores" target="janela"/>
+            </map>
+            <iframe src="google-glass.html" name= "janela" id="frame-spec" usemap="#meumapa" ></iframe>
+        </section>
+    </article>  
+</setion>
 
-
-
-
-
-
-
-<footer id="rodape">
-    <p>Copyright &copy; 2013 - by Gustavo Guanabara<br/>
-    <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href= "http://twitter.com/cursoemvideo" target="_blank">Twitter</a></p>
-    </footer>
+        <footer id="rodape">
+        <p>Copyright &copy; 2013 - by Gustavo Guanabara<br/>
+        <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href= "http://twitter.com/cursoemvideo" target="_blank">Twitter</a></p>
+        </footer>
     </div>
-    </body>
-    </html>
+</body>
+ </html>
